--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
+altgraph==0.17.3
 et-xmlfile==1.1.0
 openpyxl==3.1.2
+pefile==2023.2.7
+pyinstaller==5.12.0
+pyinstaller-hooks-contrib==2023.3
+pywin32-ctypes==0.2.0
